--- a/src/pages/en/cfp.astro
+++ b/src/pages/en/cfp.astro
@@ -6,9 +6,10 @@ import {
   CFP_END_DATE,
   CFP_LINK,
   CFP_START_DATE,
-  eventYear,
+  EVENT_YEAR,
 } from "../../consts";
 import {
+  displayDate,
   isAfterCFPClosing,
   isAfterCFPOpenning,
   isAfterOpenningProgram,
@@ -109,7 +110,9 @@ const schema = {
             >
           </div>
           <div class="timeline-start md:text-end mb-10">
-            <time class="font-mono italic">{CFP_START_DATE}</time>
+            <time class="font-mono italic">
+              {displayDate(CFP_START_DATE, "en-US")}
+            </time>
             <div class="text-lg font-black">CFP open</div>
             <div>Submit your talks for the conference</div>
             {
@@ -137,7 +140,9 @@ const schema = {
             >
           </div>
           <div class="timeline-end mb-10">
-            <time class="font-mono italic">{CFP_END_DATE}</time>
+            <time class="font-mono italic"
+              >{displayDate(CFP_END_DATE, "en-US")}</time
+            >
             <div class="text-lg font-black">Submission Deadline</div>
             Last day to submit your talks
           </div>
@@ -158,7 +163,7 @@ const schema = {
             >
           </div>
           <div class="timeline-start md:text-end mb-10">
-            <time class="font-mono italic">March {eventYear}</time>
+            <time class="font-mono italic">March {EVENT_YEAR}</time>
             <div class="text-lg font-black">Talks review</div>
             Our team will review your talks
           </div>
@@ -179,7 +184,7 @@ const schema = {
             >
           </div>
           <div class="timeline-end mb-10">
-            <time class="font-mono italic">Middle March {eventYear}</time>
+            <time class="font-mono italic">Middle March {EVENT_YEAR}</time>
             <div class="text-lg font-black">Review feedback</div>
             <div>We'll send you feedback about your talks</div>
           </div>
@@ -200,7 +205,7 @@ const schema = {
             >
           </div>
           <div class="timeline-start md:text-end mb-10">
-            <time class="font-mono italic">End of March {eventYear}</time>
+            <time class="font-mono italic">End of March {EVENT_YEAR}</time>
             <div class="text-lg font-black">Final schedule</div>
             <div>
               Once we'll get validation from all accepted talks, we'll publish
