--- a/src/pages/fr/agenda.astro
+++ b/src/pages/fr/agenda.astro
@@ -99,6 +99,16 @@ const schema = {
         }
 
         {isAfterOpenningProgram() && <AgendaComponent breaks={breaks} />}
+
+        {
+          !isAfterCFPOpenning() && (
+            <section class="flex flex-col items-center gap-4">
+              <p class="text-center text-2xl font-bold">
+                L'agenda sera disponible après la clôture de l'appel à speakers.
+              </p>
+            </section>
+          )
+        }
       </section>
     </section>
   </main>
