Suppression des informations de Yann-Thomas plus utilisé comme twitter ...

--- a/src/pages/en/about.astro
+++ b/src/pages/en/about.astro
@@ -66,9 +66,7 @@ const crew = [
         name: 'Yann-Thomas Le Moigne',
         title: 'Technical Lead at Apside Top',
         heroImage: '/crew/yann-thomas-le-moigne.jpeg',
-        linkedin: 'https://www.linkedin.com/in/yatho/',
-        twitter: 'https://x.com/yatho91',
-        bluesky: 'https://bsky.app/profile/yatho.bsky.social'
+        linkedin: 'https://www.linkedin.com/in/yatho/'
     },
     {
         name: 'Camille Pillot',
