Améliration du référencement de la page coc

--- a/src/pages/en/coc.astro
+++ b/src/pages/en/coc.astro
@@ -1,5 +1,5 @@
----
-import {SITE_DOMAIN} from "../../consts";
+coc---
+import {SITE_DOMAIN, SITE_TITLE} from "../../consts";
 import Layout from "../../layouts/Layout.astro";
 import HeaderHero from '../../components/HeaderHero.astro';
 
@@ -15,7 +15,7 @@ const schema = {
         "url": `${SITE_DOMAIN}/coc`,
         "author": {
             "@type": "Organization",
-            "name": "Event org"
+            "name": SITE_TITLE
         },
         "publisher": {
             "@type": "Organization",
