--- a/src/pages/fr/coc.astro
+++ b/src/pages/fr/coc.astro
@@ -1,6 +1,7 @@
 ---
 import Layout from "../../layouts/Layout.astro";
 import HeaderHero from '../../components/HeaderHero.astro';
+import { SITE_DOMAIN, SITE_TITLE } from "../../consts";
 
 const schema = {
     "@context": "https://schema.org",
@@ -11,10 +12,10 @@ const schema = {
         "@type": "CreativeWork",
         "name": "Code de conduite",
         "description": "Le code de conduite définit le comportement attendu de tous les participants à la conférence...",
-        "url": "/fr/coc",
+    "url": `${SITE_DOMAIN}/coc`,
         "author": {
             "@type": "Organization",
-            "name": "Event org"
+            "name": SITE_TITLE
         }
     }
 }
