--- a/src/pages/fr/venue.astro
+++ b/src/pages/fr/venue.astro
@@ -73,7 +73,7 @@ const schema = {
         </section>
 
         <section class="space-y-6">
-          <div id="map" class="w-full h-[400px] rounded-lg shadow-md"></div>
+          <div id="map" class="w-full h-[400px] rounded-lg shadow-md z-0"></div>
 
           <div class="bg-gray-700 p-6 rounded-lg shadow-md">
             <h2 class="text-2xl font-bold mb-4">À propos du quartier</h2>
