--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,5 +1,5 @@
 ---
-import { SITE_TITLE } from "../consts";
+import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
 
 interface Props {
   title: string;
@@ -14,7 +14,7 @@ const metaTitle = `${SITE_TITLE} - ${title}`;
 <html lang={Astro.currentLocale}>
   <head>
     <meta charset="UTF-8" />
-    <meta name="description" content="NG Baguette Conf 2025" />
+    <meta name="description" content={SITE_DESCRIPTION} />
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
