--- a/src/components/Sponsors.astro
+++ b/src/components/Sponsors.astro
@@ -2,16 +2,16 @@
 import { SPONSORS } from "../consts";
 ---
 
-<ul
-  class="flex flex-col md:flex-row justify-evenly items-center gap-8 md:gap-4 bg-white rounded-lg p-8 my-8"
->
-  {
-    SPONSORS.map((sponsor) => (
-      <li>
-        <a href={sponsor.url} target="_blank">
-          <img src={sponsor.photos} alt={sponsor.name} class="w-24" />
-        </a>
-      </li>
-    ))
-  }
-</ul>
+{
+  SPONSORS.length > 0 && (
+    <ul class="flex flex-col md:flex-row justify-evenly items-center gap-8 md:gap-4 bg-white rounded-lg p-8 my-8">
+      {SPONSORS.map((sponsor) => (
+        <li>
+          <a href={sponsor.url} target="_blank">
+            <img src={sponsor.photos} alt={sponsor.name} class="w-24" />
+          </a>
+        </li>
+      ))}
+    </ul>
+  )
+}
