--- a/src/pages/en/index.astro
+++ b/src/pages/en/index.astro
@@ -3,6 +3,7 @@ import Partners from "../../components/Partners.astro";
 import Sponsors from "../../components/Sponsors.astro";
 import Layout from "../../layouts/Layout.astro";
 import {
+  ADDRESS,
   BLIND_TICKET_PRICE,
   BLIND_TICKET_SOLD_OUT,
   EVENT_DATE,
@@ -38,7 +39,9 @@ import { displayDate } from "../../utils";
             <p class="mt-4 text-2xl text-primary font-bold">
               {displayDate(EVENT_DATE, "en-US")} - 9h30
             </p>
-            <p class="mt-2 font-bold">Nantes, France</p>
+            <p class="mt-2 font-bold">
+              {ADDRESS.addressLocality}, {ADDRESS.addressCountry}
+            </p>
           </div>
           <div class="flex-1 mt-8 mb-8 md:mb-0">
             <h2 class="text-2xl md:text-3xl font-bold mb-8">Tickets</h2>
