--- a/src/pages/en/index.astro
+++ b/src/pages/en/index.astro
@@ -10,6 +10,8 @@ import {
   HELLOASSO_LINK,
   OPEN_BLIND_TICKET_SALE_DATE,
   OPEN_TICKET_SALE_DATE,
+  PARTENERS,
+  SPONSORS,
   TICKET_PRICE,
   TICKET_SOLD_OUT,
 } from "../../consts";
@@ -131,11 +133,18 @@ import { displayDate } from "../../utils";
               </li>
             </ul>
 
-            <h2 class="text-2xl md:text-3xl font-bold my-8">Sponsors</h2>
-            <Sponsors />
+            {SPONSORS.length > 0 && (
+              <>
+                <h2 class="text-2xl md:text-3xl font-bold my-8">Sponsors</h2>
+                <Sponsors />
+              </>
+            )}
 
-            <h2 class="text-2xl md:text-3xl font-bold my-8">Partners</h2>
-            <Partners />
+            {PARTENERS.length > 0 && (
+              <h2 class="text-2xl md:text-3xl font-bold my-8">Partners</h2>
+              <Partners />)
+            }
+            
             <!-- <div role="alert" class="alert mt-8">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
